--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Stopwatch App (Amateur)</title>
+  <title>Stopwatch App AltSchool Project 1</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
